--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="body">
   <div class="gradient">
     <ul class="bubbles">
       <li></li>
@@ -24,7 +24,7 @@
       <a [routerLink]="['/ApiPaises/About']">
         <h3>ABOUT</h3>
       </a>
-      <a [routerLink]="['/','NavVertical']">
+      <a [routerLink]="['/ApiPaises/MainMenu/ListCountries']">
         <h3>CONSUME</h3>
       </a>
     </div>
@@ -66,4 +66,4 @@
     </div>
     <div class="div-cuadro-ch"></div>
   </div>
-</body>
+</div>
