--- a/front-end/src/app/components/home/home.component.sass
+++ b/front-end/src/app/components/home/home.component.sass
@@ -28,11 +28,11 @@ $border:1px solid red
 
 
 
-body
+.body
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 
-body
+.body
   .gradient
     position: absolute
     padding: 0
@@ -41,8 +41,6 @@ body
     width: 100%
     height: 100vh
     background: #0D0C1F
-    //background-image: linear-gradient(#CCFF33, #9EF01A, #70E000, #38B000, #008000, #007200, #006400, #004B23)
-    //background-image: url('../../../assets/images/Home.PNG')
 
 .gradient
   .bubbles
