--- a/front-end/src/app/components/listcountries/listcountries.component.html
+++ b/front-end/src/app/components/listcountries/listcountries.component.html
@@ -40,7 +40,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let datos of lista | paginate:page_size:page_number">
-            <td><img src="{{datos.flag}}" alt=""></td>
+            <td><img src="{{datos.flag}}" alt="Logo"></td>
             <td>{{datos.name}}</td>
             <td>{{datos.englishName}}</td>
             <td>{{datos.capital}}</td>
