--- a/front-end/src/app/components/listcountries/listcountries.component.sass
+++ b/front-end/src/app/components/listcountries/listcountries.component.sass
@@ -32,6 +32,7 @@ $border: 1px solid red
 .div-general
   margin-left: 5%
   width: 90%
+  height: 70vh
 
 
 .div-general
@@ -70,8 +71,8 @@ $border: 1px solid red
 
 .div-table
   width: 100%
-  height: 440px
-
+  height: 100%
+  padding-bottom: 20px
 .scroll-table
   height: 440px
   overflow-y: scroll
@@ -116,14 +117,3 @@ $border: 1px solid red
      margin-left: auto
      width: 100%
      margin-top: 10px
-
-  .table-dark
-    tr
-      th
-        display: grid
-        grid-template-columns: 50px
-        grid-template-rows: 50px
-      &:nth-last-child(1)
-        grid-column-start: 1
-        grid-column-end: 4
-
