--- a/front-end/src/app/components/login/login.component.sass
+++ b/front-end/src/app/components/login/login.component.sass
@@ -26,18 +26,57 @@ $widthmat-form-inp: 50%
       outline-width: 0
 
 
-body
+@mixin animate($animation,$duration,$method,$times)
+    animation: $animation $duration $method $times
+
+
+@mixin keyframes($name)
+    @keyframes #{$name}
+        @content
+
+
+.body
   font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 
 
-body
+.body
   .gradient
     position: fixed
     width: 100%
     height: 100vh
-    //background-image: linear-gradient(#CCFF33, #9EF01A, #70E000, #38B000, #008000, #007200, #006400, #004B23)
-    background-image: linear-gradient(45deg, #0D47A1, #90CAF9)
-    opacity: 0.7
+    background-image: linear-gradient(135deg, #0D0C1F, #161534, #1F1D49, #2D2B6A,  #3E3B8E)
+
+
+.gradient
+  .bubbles
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    overflow: hidden
+
+
+.bubbles
+  li
+    position: absolute
+    list-style: none
+    display: block
+    &:nth-child(1)
+      right: -75px
+      width: 494px
+      height: 494px
+      transform: rotate(45deg)
+      -webkit-transform: rotate(45deg)
+      background-image: linear-gradient(135deg, #2D2B6A,  #3E3B8E 250%)
+    &:nth-child(2)
+      left: 180px
+      bottom: 20px
+      width: 350px
+      height: 350px
+      transform: rotate(45deg)
+      -webkit-transform: rotate(45deg)
+      background-image: linear-gradient(135deg, #2D2B6A,  #3E3B8E 250%)
 
 
 
@@ -47,110 +86,208 @@ body
 
 
 .div-general
-
   .div-logo
     @include contents()
     height: 75px
+    width: auto
 
 
-  span
-    border: $border
-    width: 75px
-    height: 75px
-    border-radius: 50%
-    background-color: transparent
-    border: 0 solid #168AAD
+  .div-logo
+    span
+      cursor: pointer
+      width: 200px
+      height: 75px
+      background-color: transparent
+      color: #FFFFFF
+      font-weight: 600
+      @include contents()
+
+  .div-logo
+    span
+      img
+        width: 70px
+        height: 70px
+        margin-right: 10px
+
+  .div-logo
+    .account
+      width: calc( 100% - 200px )
+      height: 75px
+      @include contents()
+      justify-content: flex-end
+
+  .account
+    .ctn-ul
+      @include contents()
+
+  .ctn-ul
+    ul
+      width: auto
+      height: auto
+      color: #FFFFFF
+      list-style: none
+      @include contents()
+      margin-top: auto
+      margin-bottom: auto
+
+  ul
+    li
+      &:nth-last-child(2)
+        margin-right: 25px
+      &:nth-last-child(1)
+        margin-right: 50px
+
+  ul
+    li
+      a
+        text-decoration: none
+        color: #FFFFFF
+        width: auto
+        padding: 5px 30px
+        font-size: .9em
+        border-radius: 5px
+        border: $border
+        transition: all 300ms
+        &:hover
+          color: #000000
+          background-color: #FFFFFF
+
+  .info-form
     @include contents()
+    margin-top: 105px
+    margin-left: 6.5%
+    width: 87%
+    padding-bottom: 25px
 
-  span
-    img
-      width: 70px
-      height: 70px
+
 
   .div-name
     @include contents()
-    height: 75px
+    height: auto
+    width: 500px
 
   .div-cont-form
     @include contents()
+    justify-content: flex-start
+    padding-left: 50px
     text-align: center
-    width: 100%
-
-
-
-.div-logo .icon
-  width: 100%
-  height: 100%
+    width: calc( 1150px - 400px )
+    height: 295px
+    background-color: #FFFFFF
+    border: $border
+    margin-left: 100px
+    box-sizing: border-box
 
 .div-name h1
-  font-size: 24px
-  font-weight: 300
-  letter-spacing: -0.5px
-  color: #000000
-  font-weight: bold
+  color: #FFFFFF
+  font-size: 50px
 
-
+.div-name
+  h1
+    p
+      padding-top: 25px
+      font-size: 18px
+      font-weight: 300
 
 .sig-in
-  background-color: #168AAD
-  border-color: rgba(240,246,252, .1)
+  background-color: #1F1D49
+  border-color: none
   color: #FFFFFF
-  width: 275px
-  margin-top: 15px
+  width: 180px
+  height: 50px
+  font-weight: 300
+  border-radius: 5px
+  transition: all 300ms
+  margin-top: 10px
   &:hover
-    background-color: #1A759F
+    background-color: #0D0C1F
 
 
 .card
-  width: auto
-  //background-color: #161b22
+  width: calc( 100% - 50px )
   background-color: transparent
-  border: 0 solid #21262d
-  padding-bottom: 30px
+  border: none
+  padding-bottom: 25px
 
-.width
-  width: $widthmat-form-inp
+.card
+  .div-inputs
+    width: 100%
+    box-sizing: border-box
+    height: 250px
 
+.cont-user
+  width: 100%
+  height: 250px
 
-.div-inputs
-  width: auto
-  box-sizing: border-box
-  height: auto
-
-
-
-.cont-user, .cont-pass
-  width: 275px
-  height: auto
-
+.cont-user
+  .form
+    height: 250px
 
 
 .cont-user
-  .user
-    @include labels()
-    color: #000000
-    font-weight: bold
+  .mat-form-field
+    width: 100%
+    height: auto
 
-  .usermail
-    margin-top: 5px
-    margin-bottom: 15px
-    width: 275px
-    border-radius: 6px
-    font-size: 14px
-    line-height: 20px
-    vertical-align: middle
-    background-repeat: no-repeat
-    background-position: right 8px center
-    outline: none
-    height: 32px
-    color: #000000
-    padding: 5px 12px
-    border: 1px solid #c9d1d9
-    background-color: #c9d1d9
+.mat-user
+  margin-top: 15px
 
+
+.mb-3
+    border-bottom: 2px solid #ced4da
+    height: 60px
+
+.mb-3
+  .inp-email, .inp-password
+    padding: 0
+    padding-left: 10px
+    border: none
+
+.mb-3
+  .inp-email
+    &:focus
+      padding-left: 12px
+      padding-top: 0
+      padding-bottom: 0
+      box-shadow: 0 10px 21px -6px rgb(13 110 253 / 25%)
+
+  .inp-password
+    &:focus
+      padding-left: 12px
+      padding-top: 0
+      padding-bottom: 0
+      box-shadow: 0 10px 21px -6px rgb(13 110 253 / 25%)
+
+
+.mb-3
+  .inp-email
+    &:focus ~ label
+      transform: scale(.80) translateY(-1rem) translateX(1rem)
+
+.mb-3
+  .inp-password
+    &:focus ~ label
+      transform: scale(.80) translateY(-1rem) translateX(1rem)
+
+.cont-pass
+  .lbl-forgot
+    .example-full-width
+      .mb-3
+          .lbl-password
+            color: #000000
+
+.example-full-width
+  .hidden
+    top: 10px
+
+.mat-error
+  color: red
+  margin-top: -6px
+  font-size: 14px
 
 .lbl-forgot
   @include labels()
+  margin-top: 20px
 
 
 
@@ -160,50 +297,22 @@ body
     color: #1E6091
     font-weight: bold
 
-  .passw
-    margin-top: 5px
-    margin-bottom: 15px
-    width: 275px
-    border-radius: 6px
-    font-size: 14px
-    line-height: 20px
-    vertical-align: middle
-    background-repeat: no-repeat
-    background-position: right 8px center
-    outline: none
-    height: 32px
-    color: #000000
-    padding: 5px 12px
-    border: 1px solid #c9d1d9
-    background-color: #c9d1d9
+@media screen and (max-width: 800px)
+  .info-form
+    flex-wrap: wrap
 
-  .pass
-    font-weight: bold
-    color: #000000
+  .info-form
+    .div-name
+      width: 100%
+    .div-cont-form
+      width: 100%
+      margin-left: 0
 
-.div-create
-  width: 100%
-  height: 100px
-  margin-top: 15px
-  @include contents()
-
-.cont-account
-  width: 300px
-  height: 55px
-  //border: 1px solid #30363d
-  border-radius: 6px
-  color: #c9d1d9
-  @include contents()
-
-.cont-account
-  a
-    @include links()
-    color: #184E77
-    font-weight: bold
-
-  li
-    list-style: none
-    color: #000000
-    font-weight: bold
+@media screen and (max-width: 588px)
+  .ctn-ul
+    ul
+      li
+        &:nth-last-child(2)
+          display: none
 
 
