--- a/front-end/src/app/components/regcities/regcities.component.html
+++ b/front-end/src/app/components/regcities/regcities.component.html
@@ -47,7 +47,7 @@
         </fieldset>
         <div class="d-grid gap-1 d-md-block btn-position">
           <button class="btn btn-success" type="submit" id="btn-register" [disabled]="newForm.invalid">Register</button>
-          <button class="btn btn-danger" type="submit" id="btn-register">Cancel</button>
+          <button class="btn btn-danger" type="submit" id="btn-register" [routerLink]="['/ApiPaises/MainMenu/ListCities']">Cancel</button>
         </div>
       </form>
     </div>
