--- a/front-end/src/app/components/deletecity/deletecity.component.html
+++ b/front-end/src/app/components/deletecity/deletecity.component.html
@@ -46,7 +46,7 @@
     </table>
   </div>
   <div class="cont-button">
-    <button class="btn btn-danger" id="btn-delete" *ngFor="let datos of lista" (click)="deleteCity(datos.id)" type="submit">Delete</button>
+    <button class="btn btn-danger" id="btn-delete" *ngFor="let datos of lista" (click)="deleteCity(datos.namecity)" type="submit">Delete</button>
   </div>
 </div>
 
