--- a/front-end/src/app/components/navhorizontal/navhorizontal.component.html
+++ b/front-end/src/app/components/navhorizontal/navhorizontal.component.html
@@ -1,11 +1,11 @@
 <nav class="nav justify-content-center">
   <li class="nav-item center">
-    <a class="nav-link active" [routerLink]="['/','Home']" aria-current="page" href="#">
+    <a class="nav-link active" [routerLink]="['Home']" aria-current="page" href="#">
       <!--<img src="" width="50" height="50" class="d-inline-block align-text-top"/>-->
     </a>
   </li>
   <li class="nav-item right">
-    <a class="nav-link active" aria-current="page" [routerLink]="['/','Home']">
+    <a class="nav-link active" aria-current="page" [routerLink]="['Home']">
       <button class="btn btn-dark" type="submit">Home</button>
     </a>
   </li>
