--- a/front-end/src/app/components/register/register.component.html
+++ b/front-end/src/app/components/register/register.component.html
@@ -1,78 +1,64 @@
-<body>
-  <div class="gradient"></div>
-  <div class="div-general">
-    <div class="div-logo"><span class="spanL">
-        <img src="../../../assets/images/Logo.svg"/>
-      </span></div>
-    <br>
-    <div class="div-name">
-      <h1>Create your account</h1>
-    </div>
-    <br>
-    <form class="div-cont-form">
-      <div class="cardF">
-        <div class="div-main-card">
-          <div class="div-bottom">
-            <div class="input-group">
-              <span class="input-group-text">First and last name</span>
-              <input type="text" aria-label="First name" class="form-control">
-              <input type="text" aria-label="Last name" class="form-control">
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="div-main-email">
-          <div class="div-top-ep">
-          </div>
-          <div class="div-bottom-ep">
-            <div class="input-group">
-              <span class="input-group-text">Email</span>
-              <input type="email" aria-label="Email" class="form-control">
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="div-main-user">
-          <div class="div-top-ep">
-          </div>
-          <div class="div-bottom-ep">
-            <div class="input-group">
-              <span class="input-group-text">User</span>
-              <input type="text" aria-label="User" class="form-control">
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="div-main-pass">
-          <div class="div-top-ep">
-          </div>
-          <div class="div-bottom-ep">
-            <div class="input-group">
-              <span class="input-group-text">Password</span>
-              <input type="password" aria-label="Password" class="form-control">
-            </div>
-          </div>
-        </div>
-        <br>
-        <div class="div-main-phone">
-          <div class="div-top-ep">
-          </div>
-          <div class="div-bottom-ep">
-            <div class="input-group">
-              <span class="input-group-text">Phone</span>
-              <input type="text" aria-label="Phone" class="form-control">
-            </div>
-          </div>
-        </div>
-        <div class="div-main-buttons">
-          <div class="div-top-ep">
-            <div class="div-top-all-ep"><h3></h3></div>
-          </div>
-          <div class="div-bottom-ep">
-            <div class="div-bottom-all-ep"><input type="submit" value="Create account" class="inp-submit"></div>
-          </div>
-        </div>
-      </div>
-    </form>
+<div class="body">
+  <div class="gradient">
+    <ul class="bubbles">
+      <li></li>
+      <li></li>
+    </ul>
   </div>
-</body>
+
+  <div class="div-general">
+    <div class="div-logo">
+      <span>
+        <img src="../../../assets/images/Logo.svg"/>
+         API PAISES
+      </span>
+      <div class="account">
+        <div class="ctn-ul">
+          <ul>
+            <li>Already have an account?</li>
+            <li><a [routerLink]="['/ApiPaises/sign/in']">SIGN IN</a></li>
+          </ul>
+      </div>
+      </div>
+    </div>
+    <div class="info-form">
+      <div class="div-name">
+        <h1>Sig in <br>to <strong>API Paises</strong>
+        <p>Enter your details to sign in.</p></h1>
+      </div>
+      <br>
+      <div class="div-cont-form">
+        <div class="card">
+            <div class="div-inputs">
+              <div class="cont-user">
+                <form class="form-floating form">
+                  <mat-form-field class="example-full-width mat-user" appearance="fill">
+                    <div class="form-floating mb-3">
+                      <input type="email" matInput placeholder=" " [formControl]="email" required class="form-control inp-email" id="floatingInput">
+                      <label for="floatingInput">Email address</label>
+                    </div>
+                    <mat-error class="mat-error" *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+                  </mat-form-field>
+                  <div class="cont-pass">
+                    <div class="lbl-forgot">
+                        <mat-form-field class="example-full-width" appearance="fill">
+                          <div class="form-floating mb-3">
+                            <input type="password" matInput [type]="hide ? 'password' : 'text'" placeholder=" " class="form-control inp-password" id="floatingInput">
+                            <label for="floatingInput" class="lbl-password">Password</label>
+                          </div>
+                          <a class="hidden" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                          </a>
+                        </mat-form-field>
+                    </div>
+                  </div>
+                  <button mat-raised-button class="sig-in" [routerLink]="['/','NavVertical']">Sig in</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+</div>
+
