Cambio de nombre de la apli

--- a/front-end/src/app/components/home/home.component.html
+++ b/front-end/src/app/components/home/home.component.html
@@ -1,69 +1,69 @@
 <body>
-  <div class="gradient">
-    <ul class="bubbles">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
-  <div class="div-general">
-    <div class="menu-right-v">
-      <a [routerLink]="['/ApiPaises/Home']">
-        <h3>HOME</h3>
-      </a>
-      <a [routerLink]="['/ApiPaises/Work']">
-        <h3>WORK</h3>
-      </a>
-      <a [routerLink]="['/ApiPaises/About']">
-        <h3>ABOUT</h3>
-      </a>
-      <a [routerLink]="['/','NavVertical']">
-        <h3>CONSUME</h3>
-      </a>
-    </div>
-    <div class="div-call-components">
-      <div class="div-title-api">
-        <h1 class="transparent shadowh">API <br> PAISES</h1>
-      </div>
-    </div>
-  <div class="div-view">
-    <div class="cont-div-view inp-a">
-      <a class="inp-view ">VIEW WORK </a>
-    </div>
-  </div>
-  </div>
-  <div class="info-all-countries">
-    <div class="div-cuadros"></div>
-    <div class="div-info">
-      <div class="div-details">
-        <ul>
-          <li>
-            <div class="number">150+</div>
-            <p>COUNTRIES</p>
-          </li>
-          <li>
-            <div class="number">100k</div>
-            <p>PROVINCES</p>
-          </li>
-          <li>
-            <div class="number">50k</div>
-            <p>CITIES</p>
-          </li>
+    <div class="gradient">
+        <ul class="bubbles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
         </ul>
-      </div>
     </div>
-  </div>
-  <div class="div-characteristics">
-    <div class="div-info-ch">
-      <app-slider [items]="carouselData"></app-slider>
+    <div class="div-general">
+        <div class="menu-right-v">
+            <a [routerLink]="['/ApiPaises/Home']">
+                <h3>HOME</h3>
+            </a>
+            <a [routerLink]="['/ApiPaises/Work']">
+                <h3>WORK</h3>
+            </a>
+            <a [routerLink]="['/ApiPaises/About']">
+                <h3>ABOUT</h3>
+            </a>
+            <a [routerLink]="['/','NavVertical']">
+                <h3>CONSUME</h3>
+            </a>
+        </div>
+        <div class="div-call-components">
+            <div class="div-title-api">
+                <h1 class="transparent shadowh">XSON <br> WORLD</h1>
+            </div>
+        </div>
+        <div class="div-view">
+            <div class="cont-div-view inp-a">
+                <a class="inp-view ">VIEW WORK </a>
+            </div>
+        </div>
     </div>
-    <div class="div-cuadro-ch"></div>
-  </div>
+    <div class="info-all-countries">
+        <div class="div-cuadros"></div>
+        <div class="div-info">
+            <div class="div-details">
+                <ul>
+                    <li>
+                        <div class="number">150+</div>
+                        <p>COUNTRIES</p>
+                    </li>
+                    <li>
+                        <div class="number">100k</div>
+                        <p>PROVINCES</p>
+                    </li>
+                    <li>
+                        <div class="number">50k</div>
+                        <p>CITIES</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="div-characteristics">
+        <div class="div-info-ch">
+            <app-slider [items]="carouselData"></app-slider>
+        </div>
+        <div class="div-cuadro-ch"></div>
+    </div>
 </body>
